docs(architecture): add initial class diagram [MMD-001]
- Added Mermaid source file
- Exported PNG/PDF renders
- Updated ARCHITECTURE.md

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,7 @@
 /.github export-ignore
 CHANGELOG.md export-ignore
 .styleci.yml export-ignore
+
+# compress diagram files
+*.mmd diff=text merge=text
+*.puml diff=text merge=text
